--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,8 @@
   publish = "dist"
   functions = "netlify/functions"
 
+# Force cache invalidation - timestamp: 2025-07-18T17:45:00Z
+
 [build.environment]
   NODE_VERSION = "18.18.0"
   NPM_FLAGS = "--legacy-peer-deps"
