--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   publish = "dist"
   functions = "netlify/functions"
 
-# Force cache invalidation - timestamp: 2025-07-18T17:45:00Z
+# Force cache invalidation - timestamp: 2025-07-18T18:00:00Z
 
 [build.environment]
   NODE_VERSION = "18.18.0"
@@ -11,6 +11,7 @@
 
 [functions]
   node_bundler = "esbuild"
+  included_files = ["node_modules/chrome-aws-lambda/**", "node_modules/puppeteer-core/**"]
   external_node_modules = ["chrome-aws-lambda", "puppeteer-core"]
 
 [[redirects]]
