Add client-side PDF generation solution
- Created generate-pdf-jspdf.ts Netlify function as a fallback
- Added jspdf-client.html page that generates PDFs entirely client-side
- Updated netlify.toml to include html-pdf-node and pdf-lib as external modules
- This approach uses jsPDF and html2canvas for client-side PDF generation
- Includes all required elements: Couples CTA and Compatibility Radar

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   publish = "dist"
   functions = "netlify/functions"
 
-# Force cache invalidation - timestamp: 2025-07-18T18:00:00Z
+# Force cache invalidation - timestamp: 2025-07-18T19:30:00Z
 
 [build.environment]
   NODE_VERSION = "18.18.0"
@@ -11,8 +11,8 @@
 
 [functions]
   node_bundler = "esbuild"
-  included_files = ["node_modules/chrome-aws-lambda/**", "node_modules/puppeteer-core/**"]
-  external_node_modules = ["chrome-aws-lambda", "puppeteer-core"]
+  included_files = ["node_modules/chrome-aws-lambda/**", "node_modules/puppeteer-core/**", "node_modules/html-pdf-node/**", "node_modules/pdf-lib/**"]
+  external_node_modules = ["chrome-aws-lambda", "puppeteer-core", "html-pdf-node", "pdf-lib"]
 
 [[redirects]]
   from = "/*"
